"Mix" Mode in the Cycles "Color Mix" Node doesn't work anymore #48368

Closed
opened 2016-05-07 12:06:41 +02:00 by Ralf Hölzemer · 5 comments

System Information
system-info.txt

Blender Version
Broken: dd8bfa0929
Worked: 2cfadecf97

Short description of error
The "Mix" Mode of the "Color Mix" Node doesn't do anything after the code refactor in dd8bfa0929. Other Modes are working fine.

Exact steps for others to reproduce the error

cube is rendererd green

  • connect the mix node to the diffuse color

cube is still rendered green

  • change the Mode oth the Color Mix to anything other than "Mix"

other modes are working

**System Information** [system-info.txt](https://archive.blender.org/developer/F309690/system-info.txt) **Blender Version** Broken: dd8bfa0929 Worked: 2cfadecf97 **Short description of error** The "Mix" Mode of the "Color Mix" Node doesn't do anything after the code refactor in dd8bfa0929. Other Modes are working fine. **Exact steps for others to reproduce the error** - open [mix_node_bug.blend](https://archive.blender.org/developer/F309691/mix_node_bug.blend) - set the viewport to rendered cube is rendererd green - connect the mix node to the diffuse color cube is still rendered green - change the Mode oth the Color Mix to anything other than "Mix" other modes are working
Author

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Ralf Hölzemer 2016-05-07 12:06:41 +02:00
Author

Added subscriber: @cheleb

Added subscriber: @cheleb

This issue was referenced by f5930759a6

This issue was referenced by f5930759a68dc464181a971c67314be6ab712315

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@a6cb741faf

This issue was referenced by blender/cycles@a6cb741faffa970e8304b517a7290073e7305389
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48368
No description provided.