Fix T48368: Cycles mix RGB constant folding bug after recent refactor.